--- a/install.conf
+++ b/install.conf
@@ -1,4 +1,4 @@
 BINDIR="$HOME/.local/bin"
 CONF="$HOME/.config/kmanager.conf"
-INSTALL_ISO="./fedora34.iso"
+INSTALL_ISO="./manjaro-21.2.0.iso"
 LOG_FILE="./install.log"
